circle cl config v1 65