@@ -16,11 +16,9 @@ tasks.withType(Test) {
 }
 
 test {
-    jvmArgs "-javaagent:${configurations.codeCoverage.singleFile}=destfile=${buildDirName}/coverage-results/jacoco.exec,sessionid=HSServ,append=false",
-            'Djacoco=true',
-            '-Xms128m',
-            '-Xmx512m',
-            '-XX:MaxPermSize=128m'
+    jacoco {
+        destinationFile = file("$buildDir/coverage-results/jacoco.exec")
+    }
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
